fixing random missing color issue in .css file

--- a/app2/www/css/style.css
+++ b/app2/www/css/style.css
@@ -158,7 +158,7 @@ ol[role="list"] {
   top: 0;
   margin: 0 -15px 0 -15px;
   padding: 1rem 0rem 1rem 2rem;
-  background-image: linear-gradient(180deg, black, gray);
+  background-image: linear-gradient(270deg, var(--clr-base-green), var(--clr-base-purple));
   height: 10rem;
   box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.6), -2px 2px 0.5rem rgba(0, 0, 0, 0.6);
   z-index: 2000;
